<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_blue"
    android:padding="10dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnConsultarConcurso"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:background="@drawable/style_button"
        android:text="@string/consultarConcurso" />
    
    <Button
        android:id="@+id/btnCadastrarJogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:background="@drawable/style_button"
        android:text="@string/cadastrarJogo" />
    
    <Button
        android:id="@+id/btnConferirJogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:background="@drawable/style_button"
        android:text="@string/conferirJogo" />

</LinearLayout>