<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_green" >

    <LinearLayout
        android:id="@+id/layoutConsultarConcurso"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"       
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txtJogo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/holo_blue_bright"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNumero"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/holo_white"
            android:hint="@string/numero_concurso"
            android:inputType="number"
            android:padding="10dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/style_button"
            android:text="@string/consultar"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnUltimoConcurso"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/style_button"
            android:text="@string/ultimo_concurso"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/style_button"
            android:text="@string/limpar"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnConferir"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/style_button"
            android:text="@string/conferirJogo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtConcurso"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text=""
            android:textColor="@color/holo_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text=""
            android:textColor="@color/holo_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDezenas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text=""
            android:textColor="@color/holo_black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>